@@ -18,7 +18,8 @@ if( ! defined( 'ABSPATH' ) ) exit;
  * anything that strtotime() can handdle.
  * 
  * If an order has a total of 0, then access is given as soon as status
- * is set to on-hold, otherwise on completed status only.
+ * is set to processing (used when coupons get redeemed),
+ * otherwise on completed status only.
  * 
  * The Length attribute should probably be hidden, so language translations
  * won't matter.
@@ -42,7 +43,7 @@ function jigomem_add_membership( $order_id )
 	if( $order->order_total > 0 && $hook == 'order_status_completed' )
 		$continue = true;
 
-	elseif( $order->order_total <= 0 && $hook == 'order_status_on-hold' )
+	elseif( $order->order_total <= 0 && $hook == 'order_status_processing' )
 		$continue = true;
 		
 	// check our continue flag
@@ -77,8 +78,8 @@ function jigomem_add_membership( $order_id )
 	
 	update_user_meta( $order->user_id, 'jigomem_membership', strtotime( '+'. $length ) );
 }
-add_action( 'order_status_completed', 'jigomem_add_membership' );
-add_action( 'order_status_on-hold',   'jigomem_add_membership' );
+add_action( 'order_status_completed',  'jigomem_add_membership' );
+add_action( 'order_status_processing', 'jigomem_add_membership' );
 
 /**
  * Check if a user is entitled to support
